--- a/ionic/ionic/src/app/pages/design_pattern/income-all/income-all.page.html
+++ b/ionic/ionic/src/app/pages/design_pattern/income-all/income-all.page.html
@@ -28,9 +28,11 @@
   <!-- Part Of Search Data-->
   <ion-toolbar color="dark">
     <ion-row>
-      
       <ion-col>
-        <ion-label>ค้นหา</ion-label>
+       
+      </ion-col>
+      <ion-col>
+        <h6 style="margin-bottom: 2px;">ค้นหา</h6>
       </ion-col>
       <ion-col>
         <ion-datetime
@@ -38,6 +40,9 @@
           picker-format="MMM YYYY"
           [(ngModel)]="myDate"
         ></ion-datetime>
+      </ion-col>
+      <ion-col>
+       
       </ion-col>
     </ion-row>
   </ion-toolbar>
