--- a/ionic/ionic/src/app/pages/design_pattern/outcome-all/outcome-all.page.html
+++ b/ionic/ionic/src/app/pages/design_pattern/outcome-all/outcome-all.page.html
@@ -22,22 +22,21 @@
   <!-- Part Of Search Data-->
   <ion-toolbar color="dark">
     <ion-row>
-      <!-- <ion-col> -->
-        <!-- <ion-text color="light"> -->
-          <!-- <h5 style="text-align: center;"> -->
-            <!-- ค้นหา -->
-          <!-- </h5> -->
-        <!-- </ion-text> -->
-      <!-- </ion-col> -->
       <ion-col>
-        <h5 style="text-align: center;">
-          ค้นหา
-        </h5>
+       
+      </ion-col>
+      <ion-col>
+        <h6 style="margin-bottom: 2px;">ค้นหา</h6>
+      </ion-col>
+      <ion-col>
         <ion-datetime
           display-format="MMM YYYY"
           picker-format="MMM YYYY"
           [(ngModel)]="myDate"
         ></ion-datetime>
+      </ion-col>
+      <ion-col>
+       
       </ion-col>
     </ion-row>
   </ion-toolbar>
